tests/invalid/simple/TupleDefine_CompileFail_3.whiley
define int where $ >=0 && $ <= 255 as tcf3byte

define (tcf3byte x, tcf3short y) as tups
